--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         body {
             font-family: 'Georgia', serif;
-            background: linear-gradient(135deg, #ffeef8 0%, #ffe0f0 50%, #ffd6eb 100%);
-            color: #6b2d5c;
+            background: #1c2d41;
+            color: #fff0f7;
             overflow-x: hidden;
             min-height: 100vh;
         }
@@ -26,7 +26,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #ff6b9d 0%, #ffc1e3 100%);
+            background: linear-gradient(135deg, #21006e 0%, #ffc1e3 100%);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -134,15 +134,67 @@
         /* Hero section */
         .hero {
             text-align: center;
-            padding: clamp(60px, 15vh, 120px) 20px;
-            min-height: 80vh;
+            padding: 0;
+            min-height: calc(100vh - 1cm);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(180deg, rgba(255,182,193,0.4) 0%, rgba(255,218,235,0.2) 100%);
+            background: #1c2d41;
             position: relative;
             overflow: hidden;
+            border: 0.5cm solid #1c2d41;
+        }
+
+        .hero-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            height: calc(100vh - 1cm);
+            width: 100%;
+        }
+
+        .hero-center-photo {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 60vw;
+            height: 40vh;
+            z-index: 10;
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .hero-center-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .hero-photo {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .hero-photo.central .hero-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: clamp(1.5em, 5vw, 3em);
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+            text-align: center;
+            z-index: 10;
         }
 
         .hero::before {
@@ -170,7 +222,7 @@
         .hero-badge {
             display: inline-block;
             background: white;
-            color: #d4145a;
+            color: #ffffff;
             padding: 10px 25px;
             border-radius: 50px;
             font-size: clamp(0.9em, 3vw, 1.1em);
@@ -188,7 +240,7 @@
         .hero h1 {
             font-size: clamp(2.8em, 10vw, 6em);
             margin-bottom: 25px;
-            color: #d4145a;
+            color: #ffffff;
             text-shadow: 3px 3px 6px rgba(212, 20, 90, 0.2);
             animation: titleFloat 4s ease-in-out infinite;
             line-height: 1.2;
@@ -217,7 +269,7 @@
         .hero p {
             font-size: clamp(1.3em, 4.5vw, 2em);
             font-style: italic;
-            color: #9b4d8c;
+            color: #ffffff;
             margin-bottom: 35px;
             text-shadow: 1px 1px 2px rgba(155, 77, 140, 0.1);
         }
@@ -278,7 +330,7 @@
         .shape1 {
             width: 150px;
             height: 150px;
-            background: #ff6b9d;
+            background: #000000;
             border-radius: 50%;
             top: 10%;
             left: 10%;
@@ -324,16 +376,16 @@
         .quiz-section {
             padding: clamp(30px, 8vh, 60px) 20px;
             text-align: center;
-            background: white;
+            background: none;
             margin: 20px;
             border-radius: 30px;
-            box-shadow: 0 10px 40px rgba(255, 107, 157, 0.2);
         }
 
         .quiz-section h2 {
-            font-size: clamp(1.8em, 6vw, 2.5em);
-            color: #d4145a;
+            font-size: clamp(2.5em, 8vw, 4em);
+            color: white;
             margin-bottom: 30px;
+            font-weight: bold;
         }
 
         .quiz-container {
@@ -343,7 +395,7 @@
 
         .quiz-question {
             font-size: clamp(1.1em, 4vw, 1.4em);
-            color: #6b2d5c;
+            color: #ffffff;
             margin-bottom: 20px;
             font-weight: bold;
         }
@@ -760,7 +812,7 @@
 
     <!-- Background music -->
     <audio id="bgMusic" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+        <source src="./WhatsApp Audio 2026-01-08 at 12.46.50 PM.mpeg" type="audio/mpeg">
     </audio>
 
     <!-- Quiz Popup -->
@@ -789,60 +841,31 @@
     <div class="container">
         <!-- Hero section -->
         <section class="hero">
-            <div class="floating-shapes">
-                <div class="shape shape1"></div>
-                <div class="shape shape2"></div>
-                <div class="shape shape3"></div>
+            <div class="hero-center-photo">
+                <img src="./WhatsApp Image 2026-01-08 at 1.10.21 PM.jpeg" alt="Center Photo">
             </div>
-            <div class="hero-content">
-                <div class="hero-badge">❤️ Happy birthday my love ❤️</div>
-                <h1>My Love For You</h1>
-                <p>Every moment with you is a treasure that I cherish forever</p>
-                <div class="hero-buttons">
-                    <button class="hero-btn" onclick="document.querySelector('.gallery').scrollIntoView({behavior: 'smooth'})">
-                        See Our Memories
-                    </button>
-                    <button class="hero-btn secondary" onclick="document.querySelector('.message-section').scrollIntoView({behavior: 'smooth'})">
-                        Read My Message
-                    </button>
+            <div class="hero-grid">
+                <div class="hero-photo">
+                    <img src="./WhatsApp Image 2026-01-08 at .jpeg" alt="Photo 1">
                 </div>
-            </div>
-        </section>
-
-        <!-- Love Counter -->
-        <section class="counter-section">
-            <h2>⏰ Our Time Together ⏰</h2>
-            <div class="counter-grid">
-                <div class="counter-box">
-                    <div class="counter-number" id="days">0</div>
-                    <div class="counter-label">Days</div>
+                <div class="hero-photo central">
+                    <img src="./WhatsApp Image 2026-01-08 at 1.10.15 PM.jpeg" alt="Photo 2">
+                    <!-- <div class="hero-text">❤️ Happy Birthday My Love ❤️</div> -->
                 </div>
-                <div class="counter-box">
-                    <div class="counter-number" id="hours">0</div>
-                    <div class="counter-label">Hours</div>
+                <div class="hero-photo">
+                    <img src="./WhatsApp Image 2026-01-08 at 1.10.22 PM.jpeg" alt="Photo 3">
                 </div>
-                <div class="counter-box">
-                    <div class="counter-number" id="minutes">0</div>
-                    <div class="counter-label">Minutes</div>
-                </div>
-                <div class="counter-box">
-                    <div class="counter-number" id="seconds">0</div>
-                    <div class="counter-label">Seconds</div>
+                <div class="hero-photo">
+                    <img src="./WhatsApp Image 2026-01-08 at 1.10.22 .jpeg" alt="Photo 4">
                 </div>
             </div>
         </section>
 
         <!-- Interactive Quiz -->
         <section class="quiz-section">
-            <h2>حط هنا سؤال</h2>
+            <h2>HAPPY<br>BIRTHDAY</h2>
             <div class="quiz-container">
-                <div class="quiz-question" id="quizQuestion">Where did we first meet?</div>
-                <div class="quiz-options">
-                    <button class="quiz-option" onclick="checkAnswer(0)">متختارش ده</button>
-                    <button class="quiz-option" onclick="checkAnswer(1)">ولا ده</button>
-                    <button class="quiz-option" onclick="checkAnswer(2)">دوس هنا</button>
-                    <button class="quiz-option" onclick="checkAnswer(3)">لا</button>
-                </div>
+                <div class="quiz-question" id="quizQuestion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt, lorem ipsum dolor sit amet.</div>
             </div>
         </section>
 
@@ -874,6 +897,29 @@
             </div>
         </section>
 
+        <!-- Love Counter -->
+        <section class="counter-section">
+            <h2>⏰ Our Time Together ⏰</h2>
+            <div class="counter-grid">
+                <div class="counter-box">
+                    <div class="counter-number" id="days">0</div>
+                    <div class="counter-label">Days</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter-number" id="hours">0</div>
+                    <div class="counter-label">Hours</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter-number" id="minutes">0</div>
+                    <div class="counter-label">Minutes</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter-number" id="seconds">0</div>
+                    <div class="counter-label">Seconds</div>
+                </div>
+            </div>
+        </section>
+
         <!-- Video section -->
         <section class="video-section">
             <h2>✨ Our Story ✨</h2>
@@ -885,9 +931,9 @@
         <!-- Final Message -->
         <section class="message-section">
             <div class="message-box">
-                <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt</p>
-                <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt</p>
-                <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt</p>
+                <p style="font-family: 'Times New Roman', Times, serif;" data-text="lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt"></p>
+                <p data-text="lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt"></p>
+                <p data-text="lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl eget ultricies tincidunt"></p>
                 <p class="signature">With all my love,<br>Always & Forever 💖</p>
                 <button class="confetti-btn" onclick="launchConfetti()">💕 Celebrate Our Love 💕</button>
             </div>
@@ -1079,7 +1125,7 @@
         function createConfetti() {
             const confetti = document.createElement('div');
             confetti.className = 'confetti';
-            confetti.textContent = ['❤️', '💕', '💖', '💗', '⭐', '✨'][Math.floor(Math.random() * 6)];
+            confetti.textContent = ['💗','🌸'][Math.floor(Math.random() * 6)];
             confetti.style.left = Math.random() * window.innerWidth + 'px';
             confetti.style.top = '-50px';
             confetti.style.fontSize = (Math.random() * 20 + 15) + 'px';
@@ -1143,6 +1189,48 @@
                 createSparkle(e.pageX, e.pageY);
             }
         });
+
+        // Typewriter effect for message
+        function typeWriter(element, text, speed, callback) {
+            let i = 0;
+            element.textContent = '';
+            function type() {
+                if (i < text.length) {
+                    element.textContent += text.charAt(i);
+                    i++;
+                    setTimeout(type, speed);
+                } else {
+                    if (callback) callback();
+                }
+            }
+            type();
+        }
+
+        // Start typewriter when message section is visible
+        const messageObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    const paragraphs = entry.target.querySelectorAll('.message-box p[data-text]');
+                    let index = 0;
+                    function typeNext() {
+                        if (index < paragraphs.length) {
+                            const text = paragraphs[index].getAttribute('data-text');
+                            typeWriter(paragraphs[index], text, 30, () => {
+                                index++;
+                                setTimeout(typeNext, 300); // Delay between paragraphs
+                            });
+                        }
+                    }
+                    typeNext();
+                    messageObserver.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 0.5 });
+
+        const messageSection = document.querySelector('.message-section');
+        if (messageSection) {
+            messageObserver.observe(messageSection);
+        }
     </script>
 </body>
 </html>
