--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
             height: auto;
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            border: 3px solid #ffffff;
+            border: 3px solid #000000;
             clip-path: inset(0 100% 0 0);
             transition: clip-path 2s ease-out;
         }
