--- a/index.html
+++ b/index.html
@@ -837,7 +837,8 @@
 
         .photo-with-neon img {
             display: block;
-            width: 100%;
+            width: 90%;
+            margin-left: 5%;
             height: auto;
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -846,8 +847,8 @@
         /* Neon doodle */
         .neon-cake {
             position: absolute;
-            bottom: 10px;
-            right: 10px;
+            bottom: -50px;
+            right: -10px;
             width: 110px;
             height: auto;
             pointer-events: none;
