--- a/index.html
+++ b/index.html
@@ -879,6 +879,113 @@
             }
         }
 
+        /* Create Your Love Story Section */
+        .create-love-section {
+            padding: 60px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 750px;
+        }
+
+        .story {
+            position: relative;
+            width: 320px;
+            height: 800px;
+            background: transparent;
+        }
+
+        /* title */
+        .title {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: black;
+            color: white;
+            padding: 6px 14px;
+            font-size: 14px;
+            border-radius: 4px;
+        }
+
+        /* polaroid style */
+        .polaroid {
+            position: absolute;
+            background: white;
+            padding: 10px 10px 25px;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+        }
+
+        .polaroid img {
+            width: 100%;
+            display: block;
+        }
+
+        /* positions */
+        .photo-1 {
+            top: 50px;
+            left: 10px;
+            width: 180px;
+        }
+
+        .photo-2 {
+            bottom: 0px;
+            left: 0px;
+            width: 200px;
+            rotate: -10deg;
+        }
+
+        .photo-3 {
+            top: 330px;
+            right: 10px;
+            width: 120px;
+        }
+
+        /* gift stickers in diamond pattern */
+        .gift {
+            position: absolute;
+            font-size: 30px;
+        }
+
+        .gift-top {
+            left: 40px;
+            top: 380px;
+        }
+
+        .gift-left {
+            left: 10px;
+            top: 420px;
+        }
+
+        .gift-right {
+            left: 70px;
+            top: 420px;
+        }
+
+        .gift-bottom {
+            left: 40px;
+            top: 460px;
+        }
+
+        /* balloons sticker */
+        .balloons {
+            position: absolute;
+            right: 10px;
+            top: 270px;
+            font-size: 40px;
+        }
+
+        /* subtle floating effect */
+        .gift, .balloons {
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-6px); }
+            100% { transform: translateY(0); }
+        }
+
         /* Love Counter Section */
         .counter-section {
             padding: clamp(30px, 8vh, 60px) 20px;
@@ -1310,6 +1417,36 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
                     <!-- base line -->
                     <path d="M55 155 Q110 165 165 155" />
                 </svg>
+            </div>
+        </section>
+
+        <!-- Create Your Love Story Section -->
+        <section class="create-love-section">
+            <div class="story">
+
+                <!-- Top photo -->
+                <div class="polaroid photo-1">
+                    <img src="./1-3.jpeg" alt="">
+                </div>
+
+                <!-- Balloons emoji -->
+                <div class="balloons">🎈🎈🎈</div>
+
+                <!-- Gift emojis in diamond pattern -->
+                <div class="gift gift-top">🎁</div>
+                <div class="gift gift-left">🎁</div>
+                <div class="gift gift-right">🎁</div>
+                <div class="gift gift-bottom">🎁</div>
+
+                <!-- Middle photo -->
+                <div class="polaroid photo-3">
+                    <img src="./1-1.jpeg" alt="">
+                </div>
+
+                <!-- Bottom photo -->
+                <div class="polaroid photo-2">
+                    <img src="./1-2.jpeg" alt="">
+                </div>
             </div>
         </section>
 
