--- a/index.html
+++ b/index.html
@@ -926,6 +926,7 @@
             top: 50px;
             left: 10px;
             width: 180px;
+            rotate: -10deg;
         }
 
         .photo-2 {
