--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
         }
 
         .photo-2 {
-            bottom: 0px;
+            bottom: -40px;
             left: 0px;
             width: 200px;
             rotate: -10deg;
@@ -938,14 +938,25 @@
 
         .photo-3 {
             top: 330px;
-            right: 10px;
+            right: -10px;
             width: 180px;
         }
 
         /* gift stickers in diamond pattern */
         .gift {
             position: absolute;
-            font-size: 30px;
+            width: 150px;
+            height: 150px;
+            border-radius: 6px;
+            overflow: hidden;
+            top: 10cm;
+        }
+
+        .gift img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .gift-top {
@@ -1445,11 +1456,10 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
                     <img src="./ballons.png" alt="Photo">
                 </div>
 
-                <!-- Gift emojis in diamond pattern -->
-                <div class="gift gift-top">🎁</div>
-                <div class="gift gift-left">🎁</div>
-                <div class="gift gift-right">🎁</div>
-                <div class="gift gift-bottom">🎁</div>
+                <!-- Single Gift photo -->
+                <div class="gift">
+                    <img src="./gifts.png" alt="Gift Photo">
+                </div>
 
                 <!-- Middle photo -->
                 <div class="polaroid photo-3">
