--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@
 .envelope-body {
     position: absolute;
     inset: 0;
-    background: #fff0f7;
+    background: #f0a5c8;
     border: 3px solid #ff6b9d;
     border-radius: 12px;
     box-shadow: 0 12px 32px rgba(212, 20, 90, 0.3);
