--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
 
 .letter-paper-popup {
     background: #fffef7;
-    border: 3px solid #ffd1dc;
+    border: 3px solid #ff003c;
     border-radius: 16px;
     padding: 40px 32px;
     min-height: 380px;
@@ -1721,7 +1721,7 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
     <div class="envelope-flap"></div>
     
     <!-- Big heart in the center -->
-    <div class="envelope-heart">💖</div>
+    <div class="envelope-heart">❤️</div>
 
     <!-- Keep this if you still have it (but it's hidden) -->
     <div class="letter-paper" id="letterPaper">
