--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
             top: 15px;
             right: 15px;
             z-index: 1000;
-            background: white;
-            border: 3px solid #ff6b9d;
+            background: rgb(255, 255, 255);
+            border: 3px solid #000000;
             border-radius: 50%;
             width: 50px;
             height: 50px;
@@ -1312,7 +1312,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 80px;                   /* big heart – adjust as needed */
+    font-size: 50px;                   /* big heart – adjust as needed */
     z-index: 5;                        /* above body, below flap */
     color: #ff6b9d;                    /* matches your theme */
     text-shadow: 0 0 15px rgba(255, 107, 157, 0.7);
