--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             top: 15px;
             right: 15px;
             z-index: 1000;
-            background: rgb(255, 255, 255);
+            background: white;
             border: 3px solid #000000;
             border-radius: 50%;
             width: 50px;
@@ -1274,6 +1274,34 @@
             }
         }
 
+        .video-normal-section {
+    padding: clamp(40px, 10vh, 70px) 20px;
+    text-align: center;
+    background: linear-gradient(135deg, #fff0f7 0%, #ffe4f0 100%);
+}
+
+.video-normal-section h2 {
+    font-size: clamp(2em, 7vw, 3em);
+    color: #d4145a;
+    margin-bottom: 35px;
+    font-weight: bold;
+}
+
+.video-wrapper-main {
+    max-width: 960px;
+    margin: 0 auto;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 14px 45px rgba(212, 20, 90, 0.35);
+    border: 3px solid #ffc1e3;
+    background: #000;
+}
+
+.video-wrapper-main video {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 /* ───────────────────────────────────────────────
    Envelope & Letter Popup – Complete & Fixed
 ─────────────────────────────────────────────── */
@@ -1387,6 +1415,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
     transform: scale(0.92) translateY(-20px);
 }
 
+/* The outer popup wrapper – dark overlay */
 .letter-popup {
     display: none;
     position: fixed;
@@ -1396,21 +1425,28 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
     align-items: center;
     justify-content: center;
     padding: 20px;
+    opacity: 0;
+    transition: opacity 0.6s ease;
 }
 
 .letter-popup.active {
     display: flex;
+    opacity: 1;
 }
 
+/* The content container – starts hidden, animates in */
 .letter-popup-content {
     position: relative;
     width: 100%;
-    max-width: 620px;
-    background: transparent;
-    border-radius: 16px;
-    animation: popupAppear 0.7s ease-out;
+    max-width: 640px;
+    opacity: 0;
+    transform: scale(0.45) translateY(80px); /* starts small & lower */
+    transform-origin: center center;
+    animation: emergeFromEnvelope 1.1s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
+    animation-delay: 0.4s; /* slight delay after flap opens */
 }
 
+/* The actual paper – subtle extra scale for depth */
 .letter-paper-popup {
     background: #fffef7;
     border: 3px solid #ff003c;
@@ -1423,6 +1459,32 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
     position: relative;
     overflow-y: auto;
     max-height: 80vh;
+    transform: scale(1);
+    transition: transform 0.3s ease;
+}
+
+/* Key animation: pop out like coming from envelope */
+@keyframes emergeFromEnvelope {
+    0% {
+        opacity: 0;
+        transform: scale(0.45) translateY(80px);
+    }
+    60% {
+        opacity: 0.7;
+        transform: scale(1.08) translateY(-15px); /* slight overshoot */
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
+}
+.letter-video-container {
+    opacity: 0;
+    animation: fadeInUp 0.8s ease-out 1.2s forwards;
+}
+@keyframes fadeInUp {
+    from { opacity: 0; transform: translateY(30px); }
+    to   { opacity: 1; transform: translateY(0); }
 }
 
 .letter-paper-popup::before {
@@ -1469,6 +1531,170 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
 @keyframes popupAppear {
     from { opacity: 0; transform: scale(0.7) translateY(60px); }
     to   { opacity: 1; transform: scale(1) translateY(0); }
+}
+/* Video container at bottom of letter popup */
+.letter-video-container {
+    margin-top: 45px;
+    text-align: center;
+    padding-top: 20px;
+    border-top: 1px dashed #ffd1dc;
+}
+
+.letter-video-container h3 {
+    font-size: 1.5em;
+    color: #d4145a;
+    margin-bottom: 18px;
+    font-style: italic;
+    font-weight: 600;
+}
+
+.letter-video-container video {
+    width: 100%;
+    max-width: 560px;
+    border-radius: 14px;
+    box-shadow: 0 10px 35px rgba(212, 20, 90, 0.28);
+    border: 2px solid #ffc1e3;
+    background: #000;
+}
+
+.video-caption {
+    margin-top: 12px;
+    font-size: 1.1em;
+    color: #6b2d5c;
+    font-style: italic;
+    opacity: 0.9;
+}
+
+/* ── Custom Video Controls Theme ──────────────────────────────────────────────── */
+
+/* Main controls bar background */
+video::-webkit-media-controls-panel {
+    background: linear-gradient(135deg, rgba(255, 107, 157, 0.92), rgba(212, 20, 90, 0.85)) !important;
+    border-radius: 12px !important;
+    box-shadow: 0 6px 20px rgba(212, 20, 90, 0.5) !important;
+}
+
+/* Play/Pause button */
+video::-webkit-media-controls-play-button {
+    background: #ff6b9d !important;
+    border-radius: 50% !important;
+    width: 36px !important;
+    height: 36px !important;
+    filter: drop-shadow(0 2px 8px rgba(0,0,0,0.4));
+}
+
+/* Volume slider & mute button */
+video::-webkit-media-controls-volume-slider,
+video::-webkit-media-controls-mute-button {
+    color: #ffffff !important;
+}
+
+/* Progress bar & seek */
+video::-webkit-media-controls-timeline {
+    background: rgba(255,255,255,0.25) !important;
+    border-radius: 8px !important;
+}
+video::-webkit-media-controls-current-time-display,
+video::-webkit-media-controls-time-remaining-display {
+    color: #fff !important;
+    font-family: 'Georgia', serif !important;
+    font-size: 13px !important;
+}
+video::-webkit-media-controls-timeline-container {
+    background: transparent !important;
+}
+
+/* Fullscreen button */
+video::-webkit-media-controls-fullscreen-button {
+    filter: brightness(1.2) !important;
+}
+
+/* Hover/active states */
+video::-webkit-media-controls-play-button:hover,
+video::-webkit-media-controls-fullscreen-button:hover {
+    background: #e55a8b !important;
+    transform: scale(1.15) !important;
+}
+
+/* For Firefox (partial support) */
+video::-moz-media-controls {
+    background: linear-gradient(135deg, #ff6b9d, #d4145a) !important;
+}
+
+/* General fallback for other browsers */
+video::-webkit-media-controls-enclosure {
+    overflow: hidden;
+    border-radius: 12px;
+}
+.custom-video-player {
+    position: relative;
+    max-width: 960px;
+    margin: 0 auto;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 14px 45px rgba(212,20,90,0.35);
+    border: 3px solid #ffc1e3;
+}
+
+.custom-controls {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to top, rgba(212,20,90,0.9), transparent);
+    padding: 12px 20px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.custom-video-player:hover .custom-controls,
+.custom-video-player video:focus + .custom-controls {
+    opacity: 1;
+}
+
+.play-pause-btn, .mute-btn {
+    background: #ff6b9d;
+    border: none;
+    border-radius: 50%;
+    width: 42px;
+    height: 42px;
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.play-pause-btn:hover, .mute-btn:hover {
+    background: #e55a8b;
+    transform: scale(1.15);
+}
+
+.progress-bar {
+    flex: 1;
+    height: 6px;
+    background: rgba(255,255,255,0.3);
+    border-radius: 3px;
+    -webkit-appearance: none;
+}
+
+.progress-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    background: #ff6b9d;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+}
+
+.time-display {
+    color: white;
+    font-size: 14px;
+    min-width: 90px;
+    text-align: center;
 }
     </style>
 </head>
@@ -1681,6 +1907,24 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
                 <div class="photo-caption">My heart is yours</div>
             </div>
         </section> -->
+        <!-- Normal Video Section – always visible, no popup -->
+<!-- Our Beautiful Moments – normal embedded video with cover + music control -->
+<section class="video-normal-section">
+    <h2>💞 Our Beautiful Moments 💞</h2>
+    <div class="video-wrapper-main">
+        <div class="custom-video-player">
+    <video id="momentsVideo" controls preload="auto">
+        <source src="./moments.mp4" type="video/mp4">
+    </video>
+    <div class="custom-controls">
+        <button class="play-pause-btn">▶</button>
+        <input type="range" class="progress-bar" min="0" max="100" value="0">
+        <span class="time-display">0:00 / 0:00</span>
+        <button class="mute-btn">🔊</button>
+    </div>
+</div>
+    </div>
+</section>
 
         <!-- Love Counter -->
         <section class="counter-section">
@@ -1738,12 +1982,21 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
 <div class="letter-popup" id="letterPopup">
     <div class="letter-popup-content">
         <button class="letter-close" onclick="closeLetterPopup()">×</button>
-        <div class="letter-paper-popup">
+        <div class="letter-paper-popup" id="letterPaperPopup">
             <div class="letter-content" id="letterContent">
-                <!-- Typed text will appear here -->
+                <!-- Message goes here -->
+            </div>
+
+            <!-- Optional video at bottom (from your previous request) -->
+            <div class="letter-video-container">
+                <h3>Just for you... 💗</h3>
+                <video controls preload="auto">
+                    <source src="./pop-up.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </div>
+</div>
 </div>
     </div>
 
@@ -2153,7 +2406,38 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
         if (quizSection) {
             quizObserver.observe(quizSection);
         }
+// ── Beautiful Moments Video – Pause/Resume Background Music ────────────────────────────────
+const momentsVideo = document.getElementById('momentsVideo');
 
+if (momentsVideo) {
+    let musicWasPlaying = false;
+
+    // When video starts playing → pause music
+    momentsVideo.addEventListener('play', () => {
+        if (isPlaying) {
+            musicWasPlaying = true;
+            music.pause();
+            musicBtn.textContent = '🔇';
+            isPlaying = false;
+        }
+    });
+
+    // When video pauses or ends → resume music if it was playing before
+    function resumeMusicAfterVideo() {
+        if (musicWasPlaying && music.paused) {
+            music.play().then(() => {
+                isPlaying = true;
+                musicBtn.textContent = '🔊';
+                musicWasPlaying = false; // reset
+            }).catch(() => {
+                // Autoplay may be blocked – user interaction needed
+            });
+        }
+    }
+
+    momentsVideo.addEventListener('pause', resumeMusicAfterVideo);
+    momentsVideo.addEventListener('ended', resumeMusicAfterVideo);
+}
         // Interactive Envelope + Pop-up Letter (NO typewriter)
 const envelopeContainer = document.getElementById('envelopeContainer');
 const envelope = document.getElementById('envelope');
@@ -2216,6 +2500,34 @@ letterPopup.addEventListener('click', (e) => {
         closeLetterPopup();
     }
 });
+// ── Letter Video – Pause/Resume Background Music ────────────────────────────────
+const letterVideo = document.querySelector('.letter-video-container video');
+
+if (letterVideo) {
+    let musicWasPlayingBeforeLetter = false;
+
+    letterVideo.addEventListener('play', () => {
+        if (isPlaying) {
+            musicWasPlayingBeforeLetter = true;
+            music.pause();
+            musicBtn.textContent = '🔇';
+            isPlaying = false;
+        }
+    });
+
+    function resumeMusicAfterLetterVideo() {
+        if (musicWasPlayingBeforeLetter && music.paused) {
+            music.play().then(() => {
+                isPlaying = true;
+                musicBtn.textContent = '🔊';
+                musicWasPlayingBeforeLetter = false;
+            }).catch(() => {});
+        }
+    }
+
+    letterVideo.addEventListener('pause', resumeMusicAfterLetterVideo);
+    letterVideo.addEventListener('ended', resumeMusicAfterLetterVideo);
+}
     </script>
 </body>
 </html>
