--- a/index.html
+++ b/index.html
@@ -1565,142 +1565,12 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
     opacity: 0.9;
 }
 
-/* ── Custom Video Controls Theme ──────────────────────────────────────────────── */
 
-/* Main controls bar background */
-video::-webkit-media-controls-panel {
-    background: linear-gradient(135deg, rgba(255, 107, 157, 0.92), rgba(212, 20, 90, 0.85)) !important;
-    border-radius: 12px !important;
-    box-shadow: 0 6px 20px rgba(212, 20, 90, 0.5) !important;
-}
-
-/* Play/Pause button */
-video::-webkit-media-controls-play-button {
-    background: #ff6b9d !important;
-    border-radius: 50% !important;
-    width: 36px !important;
-    height: 36px !important;
-    filter: drop-shadow(0 2px 8px rgba(0,0,0,0.4));
-}
-
-/* Volume slider & mute button */
-video::-webkit-media-controls-volume-slider,
-video::-webkit-media-controls-mute-button {
-    color: #ffffff !important;
-}
-
-/* Progress bar & seek */
-video::-webkit-media-controls-timeline {
-    background: rgba(255,255,255,0.25) !important;
-    border-radius: 8px !important;
-}
-video::-webkit-media-controls-current-time-display,
-video::-webkit-media-controls-time-remaining-display {
-    color: #fff !important;
-    font-family: 'Georgia', serif !important;
-    font-size: 13px !important;
-}
-video::-webkit-media-controls-timeline-container {
-    background: transparent !important;
-}
-
-/* Fullscreen button */
-video::-webkit-media-controls-fullscreen-button {
-    filter: brightness(1.2) !important;
-}
-
-/* Hover/active states */
-video::-webkit-media-controls-play-button:hover,
-video::-webkit-media-controls-fullscreen-button:hover {
-    background: #e55a8b !important;
-    transform: scale(1.15) !important;
-}
-
-/* For Firefox (partial support) */
-video::-moz-media-controls {
-    background: linear-gradient(135deg, #ff6b9d, #d4145a) !important;
-}
-
-/* General fallback for other browsers */
-video::-webkit-media-controls-enclosure {
-    overflow: hidden;
-    border-radius: 12px;
-}
-.custom-video-player {
-    position: relative;
-    max-width: 960px;
-    margin: 0 auto;
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0 14px 45px rgba(212,20,90,0.35);
-    border: 3px solid #ffc1e3;
-}
-
-.custom-controls {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(to top, rgba(212,20,90,0.9), transparent);
-    padding: 12px 20px;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.custom-video-player:hover .custom-controls,
-.custom-video-player video:focus + .custom-controls {
-    opacity: 1;
-}
-
-.play-pause-btn, .mute-btn {
-    background: #ff6b9d;
-    border: none;
-    border-radius: 50%;
-    width: 42px;
-    height: 42px;
-    color: white;
-    font-size: 22px;
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-.play-pause-btn:hover, .mute-btn:hover {
-    background: #e55a8b;
-    transform: scale(1.15);
-}
-
-.progress-bar {
-    flex: 1;
-    height: 6px;
-    background: rgba(255,255,255,0.3);
-    border-radius: 3px;
-    -webkit-appearance: none;
-}
-
-.progress-bar::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 16px;
-    height: 16px;
-    background: #ff6b9d;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
-}
-
-.time-display {
-    color: white;
-    font-size: 14px;
-    min-width: 90px;
-    text-align: center;
-}
     </style>
 </head>
 <body>
     <!-- Password Screen -->
-    <div class="password-container" id="passwordContainer">
+    <!-- <div class="password-container" id="passwordContainer">
         <div class="password-text">Enter Password</div>
         <div class="password-row">
             <div class="password-display" id="passwordDisplay"></div>
@@ -1724,14 +1594,14 @@ video::-webkit-media-controls-enclosure {
         <button class="clear-button" onclick="clearPassword()">Clear</button>
     </div>
 
-    <!-- Wrong Password Popup -->
-    <div class="wrong-password-popup" id="wrongPasswordPopup">
+    Wrong Password Popup -->
+    <!-- <div class="wrong-password-popup" id="wrongPasswordPopup">
         <div class="wrong-password-content">
             <div class="wrong-password-emoji">😢</div>
             <div class="wrong-password-text">I'm sad</div>
             <button class="wrong-password-close" onclick="closeWrongPasswordPopup()">Try Again</button>
         </div>
-    </div>
+    </div> -->
 
     <!-- Preloader -->
     <div class="preloader-container" id="preloaderContainer">
@@ -1909,22 +1779,15 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
         </section> -->
         <!-- Normal Video Section – always visible, no popup -->
 <!-- Our Beautiful Moments – normal embedded video with cover + music control -->
-<section class="video-normal-section">
+<!-- <section class="video-normal-section">
     <h2>💞 Our Beautiful Moments 💞</h2>
     <div class="video-wrapper-main">
-        <div class="custom-video-player">
-    <video id="momentsVideo" controls preload="auto">
-        <source src="./moments.mp4" type="video/mp4">
-    </video>
-    <div class="custom-controls">
-        <button class="play-pause-btn">▶</button>
-        <input type="range" class="progress-bar" min="0" max="100" value="0">
-        <span class="time-display">0:00 / 0:00</span>
-        <button class="mute-btn">🔊</button>
+        <video id="momentsVideo" controls preload="auto">
+    <source src="./moments.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
     </div>
-</div>
-    </div>
-</section>
+</section> -->
 
         <!-- Love Counter -->
         <section class="counter-section">
