--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
 <body>
     <!-- Password Screen -->
     <div class="password-container" id="passwordContainer">
-        <div class="password-text">Enter Password</div>
+        <!-- <div class="password-text">Enter Password</div>
         <div class="password-row">
             <div class="password-display" id="passwordDisplay"></div>
             <button class="enter-button" onclick="checkPassword()">Enter</button>
@@ -1591,7 +1591,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
             <button class="keypad-button zero" onclick="addDigit('0')">0</button>
         </div>
         
-        <button class="clear-button" onclick="clearPassword()">Clear</button>
+        <button class="clear-button" onclick="clearPassword()">Clear</button> -->
     </div>
 
     <!-- Wrong Password Popup -->
