--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
 
         <!-- Love Counter -->
         <section class="counter-section">
-            <h2>⏰ Our Time Together ⏰</h2>
+            <h2>⏳ Our Time Together 🫂</h2>
             <div class="counter-grid">
                 <div class="counter-box">
                     <div class="counter-number" id="days">0</div>
