--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@ animation: heartGlow 2s ease-in-out infinite, heartPulse 1.5s ease-in-out infini
 
         /* Important Moments carousel base styles (injected) */
         .moments-section { padding: 60px 20px; text-align: center; }
-        .moments-title { font-size: clamp(1.8em, 5vw, 2.6em); color: #d4145a; margin-bottom: 20px; }
+        .moments-title { font-size: clamp(1.8em, 5vw, 2.6em); color: #ffffff; margin-bottom: 20px; }
         .moments-carousel { display:flex; align-items:center; justify-content:center; gap:12px; }
         .moments-track-wrapper { width: 860px; overflow-x:auto; overflow-y:hidden; margin: 0 auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; touch-action: pan-y; scroll-behavior: smooth; -ms-overflow-style: none; scrollbar-width: none; }
         .moments-track-wrapper::-webkit-scrollbar { height: 0; display: none; }
@@ -1357,7 +1357,7 @@ Happy Birthday. You are the most beautiful gift in my life. Your birthday isn't 
 
         <!-- Important Moments (new carousel) -->
         <section class="moments-section" id="momentsSection">
-            <h2 class="moments-title">🎂 Important Moments 🎂</h2>
+            <h2 class="moments-title">🖇️ Important Moments</h2>
             <div class="moments-carousel">
                 <div class="moments-track-wrapper">
                     <ul class="moments-track" id="momentsTrack">
